--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "cypress": "^12.7.0",
     "cypress-mochawesome-reporter": "^3.3.0",
+    "cypress-recurse": "^1.27.0",
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.2",
