--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "angular-http-server": "^1.11.1",
     "cypress": "^12.7.0",
     "cypress-mochawesome-reporter": "^3.3.0",
     "cypress-recurse": "^1.27.0",
@@ -24,6 +25,7 @@
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.2",
     "mochawesome-report-generator": "^6.2.0",
-    "rimraf": "^4.4.0"
+    "rimraf": "^4.4.0",
+    "start-server-and-test": "^2.0.0"
   }
 }
