--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ jobs:
   cypress-run:
     runs-on: macos-latest
     steps: 
+      - name: Install ffmpeg
+         run: brew install ffmpeg
       - name: Checkout
         uses: actions/checkout@v3.4.0
       - name: Cypress.io
