--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v3.4.0
       - name: Write the cypress.env.json file from github secret
         run: |
-          echo '${{ secrets.CYPRESS_ENV }}' > ./cypress/cypress.env.json
+          echo '${{ secrets.CYPRESS_ENV }}' > ./cypress.env.json
       - name: Cypress.io
         uses: cypress-io/github-action@v5.5.1
         with: 
